# sonesta

./: .gitignore  README.md  SPEC.md  pyproject.toml
evaluation/: EVALUATION.md
evaluation/.sonesta/themes/: default.json
evaluation/presentations/briefing/: presentation.json
evaluation/presentations/briefing/notes/: 002-agenda.md
evaluation/presentations/briefing/slides/: 001-title.json  002-agenda.json  003-decisions.json
evaluation/presentations/portfolio/: presentation.json
evaluation/presentations/portfolio/slides/: 001-title.json  002-products.json  003-metrics.json
evaluation/presentations/process/: presentation.json
evaluation/presentations/process/slides/: 001-title.json  002-flow.json
examples/.sonesta/: config.json
examples/.sonesta/templates/: default.json
examples/basic/assets/: README.txt
examples/basic/presentations/demo/: presentation.json
examples/basic/presentations/demo/slides/: 001-title.json  002-summary.json  003-roadmap.json
examples/presentations/lorem_demo/: presentation.json
examples/presentations/lorem_demo/notes/: 002-overview.md
examples/presentations/lorem_demo/slides/: 001-title.json  002-overview.json  003-metrics.json  004-process.json
src/sonesta/: __main__.py  cli.py  errors.py  inspect.py  models.py  project.py  render.py  validation.py
src/sonesta/themes/: ep.json
tests/: test_cli.py
